--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Sam Tancharoensuksavai <sam@nullui.co>",
   "dependencies": {
+    "aos": "^2.3.4",
     "gatsby": "^2.13.6",
     "gatsby-image": "^2.2.4",
     "gatsby-plugin-manifest": "^2.2.1",
